# certbot-dns-forpsi

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  forpsi-credentials.ini.example  pyproject.toml
.github/workflows/: publish.yml
certbot_dns_forpsi/: __init__.py  dns_forpsi.py
