[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-forpsi"
version = "0.1.1"
description = "Forpsi DNS Authenticator plugin for Certbot"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Ãkos Szabados", email = "public.repo.uncover565@passmail.net"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "certbot>=4.0.0",
    "requests>=2.32.0",
    "pyotp>=2.9.0",
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/roshek/certbot-dns-forpsi"
Repository = "https://github.com/roshek/certbot-dns-forpsi"

[project.entry-points."certbot.plugins"]
dns-forpsi = "certbot_dns_forpsi.dns_forpsi:Authenticator"

[tool.setuptools.packages.find]
where = ["."]
include = ["certbot_dns_forpsi*"]

[tool.setuptools.package-data]
certbot_dns_forpsi = ["py.typed"]